# equitylens

./: .env.example  .gitignore  DATA_SOURCES.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  cloudbuild.yaml  docker-compose.yml  vercel.json
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  vercel.json
backend/app/: init_db.py  main.py
backend/app/api/: deps.py  main.py
backend/app/auth/: __init__.py  account_service.py  contracts.py  errors.py  google.py  session_service.py
backend/app/chat/: __init__.py  answer_recovery.py  answer_schemas.py  artifacts.py  chunker.py  citation_binding.py  contracts.py  evidence_pipeline.py  fallbacks.py  indexing.py  intents.py  market_analysis_skills.py  openai_agent.py  prompts.py  quota.py  repository.py  retrieval.py  schemas.py  service.py  sse.py  structured_context.py  structured_entities.py  structured_metrics.py  structured_repository.py  tavily_discovery.py  validator.py  web_discovery.py  web_fetcher.py  web_search.py  web_trace.py  yahoo_market_analysis.py  yahoo_market_data.py  yahoo_market_metrics.py  yahoo_market_payloads.py
backend/app/companies/: __init__.py  schemas.py  service.py
backend/app/core/: ai_clients.py  config.py  database.py  db.py  errors.py  security.py
backend/app/crud/: user_crud.py
backend/app/filings/: __init__.py  artifacts.py  mapper.py  parser.py  schemas.py  sec_client.py  service.py
backend/app/financials/: __init__.py  mapper.py  schemas.py  service.py
backend/app/ingestion/: run.py
backend/app/jobs/: __init__.py  _filing_index.py  _graph_sync.py  errors.py  pipeline.py  rq_backend.py  schemas.py  service.py  state.py  tasks.py  vercel_backend.py
backend/app/maintenance/: database_backup.py
backend/app/market_data/: __init__.py  mapper.py  schemas.py  service.py  synthetic.py  yahoo.py
backend/app/migrations/: env.py
backend/app/models/: __init__.py  auth_model.py  chat_model.py  company_model.py  job_model.py  market_model.py  research_model.py  supply_chain_model.py  user_model.py
backend/app/providers/: __init__.py  contracts.py  intelligence.py  market.py  sec.py
backend/app/quota/: __init__.py  _in_memory_repository.py  errors.py  identity.py  ledger.py  repository.py  schemas.py  service.py
backend/app/research/: __init__.py  openai_generator.py  output_normalizer.py  prompts.py  schemas.py  service.py  validator.py
backend/app/schemas/: auth_schema.py  ingestion_schema.py
backend/app/supply_chain/: __init__.py  _pipeline_lifecycle.py  _pipeline_stages.py  _pipeline_support.py  _repository_mapper.py  _service_serializer.py  _validator_evidence.py  artifacts.py  (+14 more)
backend/tests/: conftest.py  e2e_app.py  test_chat_migration.py  test_company_intelligence_migration.py  test_docker_profile.py  test_migrations.py  test_readme.py  test_supply_chain_migration.py  test_vercel_config.py
(+280 files in other folders)
