[project]
name = "us-equity-research-api"
version = "0.1.0"
description = "FastAPI backend for the US equity research knowledge base"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.16,<2",
  "asyncpg>=0.30,<1",
  "fastapi>=0.117.1,<1",
  "langchain>=0.3,<1",
  "langchain-community>=0.3,<1",
  "langchain-openai>=0.3,<1",
  "loguru>=0.7,<1",
  "passlib[bcrypt]>=1.7.4,<2",
  "pgvector>=0.3,<1",
  "psycopg2-binary>=2.9,<3",
  "pydantic-settings>=2.10,<3",
  "python-dotenv>=1,<2",
  "python-jose[cryptography]>=3.5,<4",
  "python-multipart>=0.0.20,<1",
  "pyyaml>=6,<7",
  "sqlalchemy>=2.0,<3",
  "sqlmodel>=0.0.24,<0.1",
  "uvicorn[standard]>=0.35,<1",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.0,<2",
  "pytest-cov>=6.2,<7",
  "ruff>=0.12,<1",
]
worker = [
  "boto3>=1.39,<2",
  "pymupdf>=1.26,<2",
  "pypdf>=5,<7",
  "rq>=2.4,<3",
  "unstructured[pdf]>=0.18,<1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
pythonpath = ["."]
testpaths = ["tests"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
