[project]
name = "equitylens-api"
version = "0.1.0"
description = "FastAPI backend for EquityLens"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.16,<2",
  "asyncpg>=0.30,<1",
  "beautifulsoup4>=4.15,<5",
  "boto3>=1.39,<2",
  "fastapi>=0.117.1,<1",
  "google-auth[requests]>=2.40,<3",
  "httpx>=0.28,<1",
  "langchain>=0.3,<1",
  "langchain-community>=0.3,<1",
  "langchain-openai>=0.3,<1",
  "loguru>=0.7,<1",
  "openai>=1.109,<3",
  "passlib[bcrypt]>=1.7.4,<2",
  "pgvector>=0.3,<1",
  "psycopg2-binary>=2.9,<3",
  "pydantic-settings>=2.10,<3",
  "python-dotenv>=1,<2",
  "python-jose[cryptography]>=3.5,<4",
  "python-multipart>=0.0.20,<1",
  "pyyaml>=6,<7",
  "redis>=6,<9",
  "rq>=2.4,<3",
  "sqlalchemy>=2.0,<3",
  "sqlmodel>=0.0.24,<0.1",
  "tiktoken>=0.12,<1",
  "tldextract>=5.3,<6",
  "uvicorn[standard]>=0.35,<1",
  "vercel>=0.3,<1",
  "yfinance>=1.5,<2",
]

[dependency-groups]
dev = [
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.0,<2",
  "pytest-cov>=6.2,<7",
  "ruff>=0.12,<1",
]
worker = [
  "pypdf>=5,<7",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
pythonpath = ["."]
testpaths = ["tests"]
markers = [
  "postgres: integration tests requiring TEST_POSTGRES_URL",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
